--- a/pages/forms/basic_elements.html
+++ b/pages/forms/basic_elements.html
@@ -354,6 +354,11 @@
                       <label for="exampleInputName1">Name</label>
                       <input type="text" class="form-control" id="exampleInputName1" placeholder="Name">
                     </div>
+                    <select class="form-select form-group" id="exampleInputName1" aria-label="Default select example">
+                      <option selected>Select category</option>
+                      <option value="1">One</option>
+                      <option value="2">Two</option>
+                      <option value="3">Three</option></select>
                     <div class="form-group">
                       <label for="exampleInputEmail3">Short description</label>
                       <input type="text" class="form-control" id="exampleInputEmail3" placeholder="short description">
@@ -418,6 +423,9 @@
   <script src="../../js/typeahead.js"></script>
   <script src="../../js/select2.js"></script>
   <!-- End custom js for this page-->
+   <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
